# SDLSkeleton

./: CMakeLists.txt  README.md
inc/: Defaults.hpp
src/: main.cpp
